// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deleteTask > given a file path > can delete it 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer deleteFileBaz
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>deleteFileBaz</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>deleteFileBaz</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`deleteTask > given a folder name > can delete it 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer deleteFolderA
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>deleteFolderA</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>deleteFolderA</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`deleteTask > given a folder path > can delete it 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer deleteFolderB1
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>deleteFolderB1</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>deleteFolderB1</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`deleteTask > given a glob > can delete all files match the glob 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer deleteJsonFiles
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>deleteJsonFiles</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>deleteJsonFiles</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`deleteTask > given a glob with enable info log > can print will-delete files 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer deleteJsonFiles --log-level info
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts

[info] Using 1 worker for task execution
[info] Project directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
[info] Resolved options: {
  "cache": true,
  "footer": false,
  "summary": false,
  "parallel": false,
  "logLevel": "info",
  "cleanCache": false,
  "showConfig": false,
  "excludedTasks": [],
  "isWorkerThread": false,
  "tasks": [
    {
      "corrected": false,
      "rawInput": "deleteJsonFiles",
      "taskId": "root:deleteJsonFiles"
    }
  ],
  "maxWorkers": 1,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "listWorkspaces": false,
  "project": {
    "rootWorkspace": {
      "id": "root",
      "label": "",
      "packageJson": {
        "name": "@nadle/internal-nadle-test-fixtures-delete-task",
        "type": "module",
        "private": true,
        "dependencies": {
          "nadle": "workspace:*"
        },
        "nadle": {
          "root": true
        }
      },
      "absolutePath": "/ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__",
      "dependencies": [],
      "relativePath": ".",
      "configFilePath": "/ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts"
    },
    "workspaces": [],
    "packageManager": "npm",
    "currentWorkspaceId": "root"
  },
  "cacheDir": "/ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/.nadle",
  "minWorkers": 1
}
[info] Detected environments: { CI: false, TEST: true }
[info] Execution started
[info] Scheduled tasks: root:deleteJsonFiles
[log] <Yellow>></Yellow> Task <Bold>deleteJsonFiles</BoldDim> <Yellow>STARTED</Yellow>

[info] Current working dir: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
[info] Deleting paths: ./package.json, ./a/bas.json, ./b/b1/qux.json
[log]
<Green>✓</Green> Task <Bold>deleteJsonFiles</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[info] Execution finished
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;

exports[`deleteTask > given multiple file paths > can delete them 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer deleteFilesFooBar
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/delete-task/__temp__/__{hash}__/nadle.config.ts

[log] <Yellow>></Yellow> Task <Bold>deleteFilesFooBar</BoldDim> <Yellow>STARTED</Yellow>

[log]
<Green>✓</Green> Task <Bold>deleteFilesFooBar</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>1</BoldDim> task executed
`;
